# steamer-card-engine

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
comparisons/phase3_mismatch_2026-03-06_vs_2026-03-12/: compare-manifest.json  diff.json  summary.md
comparisons/phase3_recheck_2026-03-10/: compare-manifest.json  summary.md
comparisons/replay-sim_tw-paper-sim-twse-2026-03-06-full-session_baseline_20260314T200700Z__replay-sim_tw-paper-sim-twse-2026-03-06-full-session_candidate_20260314T200700Z/: compare-manifest.json  summary.md
docs/: ADAPTER_SPEC.md  ARCHITECTURE.md  AUTH_AND_SESSION_MODEL.md  CARD_SPEC.md  CLI_SPEC.md  CONSULTANT_REVIEW_COPILOT.md  CONTROL_PLANE_TOOL_REGISTRY_SPEC.md  DAYTRADING_GUARDRAILS.md  EVIDENCE_PACKAGING_HYGIENE.md  EVIDENCE_PROVENANCE_ENVELOPE_SPEC.md  FINCEPT_ABSORPTION_ROI.md  M1_EVIDENCE_PACK_ACCEPTANCE_CONTRACT.md  M1_EVIDENCE_PACK_INDEX.md  M1_SIM_COMPARABILITY_FOUNDATION_PACK.md  MIGRATION_PLAN.md  MILESTONE_M1_SIM_COMPARABILITY.md  PLAYBOOK_OWNERSHIP_ABSORPTION_V1.md  PRODUCT_SCOPE.md  SCENARIO_SPEC.md  SETUP.md  SIM_ARTIFACT_SPEC.md  STRATEGY_CATALOG_METADATA_CONTRACT_V0.md  TOPOLOGY.md
docs/receipts/: 2026-03-14_m1-stage3-first-replay-sim-comparable.md  2026-03-14_m1-stage4-candidate-engine-emitted-blocker.md  (+39 more)
frontend/: index.html  package-lock.json  package.json
tests/: test_broker_adapter_contract.py  test_broker_dry_run.py  test_cli.py  test_control_plane.py  test_dashboard.py  test_manifests.py  test_observe_paper.py  test_observe_paper_cli.py  test_observer_bridge.py  test_observer_sim.py  test_paper_cli.py  test_paper_simulator.py  test_runtime_components.py  test_session_phase.py  test_sim_compare.py  test_timesfm_first_run.py  test_timesfm_input_bridge.py  test_validation_smoke_cards.py  test_validation_smoke_operator_lane.py  test_validation_smoke_runtime_bridge.py
tools/: steamer_card_engine_m1_postclose_watchdog.py  steamer_card_engine_stage4_live_sim_first_run.py  steamer_card_engine_trading_day_preflight_cron.py  steamer_card_engine_trading_day_preflight_test_cron.py
(+312 files in other folders)
