[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "steamer-card-engine"
version = "0.1.0"
description = "Card-oriented runtime seed for Taiwan cash intraday strategy operations"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "phenomenoner" }
]
keywords = ["trading", "taiwan", "runtime", "cards", "cli", "replay"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
steamer-card-engine = "steamer_card_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/steamer_card_engine"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.5",
  "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
