[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "steamer-card-engine"
version = "0.1.0"
description = "Card-oriented runtime seed for Taiwan stock intraday strategy operations"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "phenomenoner" }
]
keywords = ["trading", "taiwan", "runtime", "cards", "cli", "replay"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
]

[project.scripts]
steamer-card-engine = "steamer_card_engine.cli:main"
steamer-card-engine-timesfm-build-input = "steamer_card_engine.timesfm_input_bridge:main"
steamer-card-engine-timesfm-first-run = "steamer_card_engine.timesfm_first_run:main"

[tool.hatch.build.targets.wheel]
packages = ["src/steamer_card_engine"]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.5",
  "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
